# NSU3

./: .gitignore
1-0/Lab1/: CMakeLists.txt
1-0/Lab1/CMakeProject1/: BigInt.cpp  BigInt.h  CMakeLists.txt  main.cpp
1-0/build-Lab1-Desktop_x86_windows_msvc2019_pe_32bit-Debug/: qtcsettings.cmake
1-0/build-Lab1-Desktop_x86_windows_msvc2019_pe_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake
1-0/build-Lab1-Desktop_x86_windows_msvc2019_pe_64bit-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-d25f3ed5ee833463dca7.json  codemodel-v2-d56856ee83d40b8bed99.json  directory-_deps.googletest-build-Debug-27e27e8c59f14c6793b4.json  directory-_deps.googletest-build.googlemock-Debug-0dccc8e43a98052d7922.json  index-2022-11-26T08-26-15-0657.json  index-2022-12-15T09-14-40-0696.json  target-gmock-Debug-790821a198149fd758a4.json  target-gtest-Debug-b2dcc3c3bad74ce7f59e.json  (+1 more)
1-0/build-Lab1-Desktop_x86_windows_msvc2019_pe_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-f46ee348cb87e2fc3b23.json  cmakeFiles-v1-feaea78d7cf652ad1e44.json  directory-_deps.googletest-build.googletest-Debug-14c883182e79958be772.json  target-BigInt-Debug-3ea3b13dbd34ebb517a5.json  target-gmock_main-Debug-7d5c7bed55c047a0977d.json
1-0/build-Lab1-Desktop_x86_windows_msvc2019_pe_64bit-Debug/.qtc_clangd/: compile_commands.json
1-0/build-Lab1-Desktop_x86_windows_msvc2019_pe_64bit-Debug/CMakeProject1/: CTestTestfile.cmake  cmake_install.cmake
1-0/build-Lab1-Desktop_x86_windows_msvc2019_pe_64bit-Debug/lib/: gtest_main.lib
1-0/build-Lab1-Desktop_x86_windows_msvc2019_pe_64bit-RelWithDebInfo/: qtcsettings.cmake
1-0/build-Lab1-Desktop_x86_windows_msvc2019_pe_64bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
1-0/build-Lab1-Desktop_x86_windows_msvc2019_pe_64bit-Release/.qtc_clangd/: compile_commands.json
1-0/build-Lab1-Desktop_x86_windows_msvc2019_pe_64bit-Release/CMakeProject1/: CTestTestfile.cmake  cmake_install.cmake
1-0/build-Lab1-Desktop_x86_windows_msvc2019_pe_64bit-Release/lib/: gtest_main.lib
Lab1/CMakeProject1/: BigInt.cpp  BigInt.h  main.cpp
Lab2/: CMakeLists.txt  input1.life  input2.life  input3.life  input4.life
Lab2/Life/: CMakeLists.txt  Cells.h  Command.cpp  Core.cpp  Core.h  EvoGUI.cpp  EvoGUI.h  ExamplesGUI.cpp  ExamplesGUI.h  ExamplesList  Field.cpp  Field.h  FieldLoader.cpp  FieldLoader.h  FieldSaver.cpp  FieldSaver.h  MainGUI.cpp  MainGUI.h  MeguGUI.cpp  MenuGUI.cpp  MenuGUI.h  OfflineGUI.cpp  OfflineGUI.h  Source.cpp  Strategy.cpp  Strategy.h  TestCore.cpp  TestCore.h  tst.cpp
(+210 files in other folders)
